# Tech-Law-RAG

./: .env.example  .gitignore  CONTEXT.md  LEARNING_NOTES.md  README.md  RUNBOOK.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: analysis.py  health.py
backend/app/core/: config.py  observability.py
backend/app/repositories/: __init__.py  document_chunks.py  documents.py  risk_dossiers.py
backend/app/schemas/: __init__.py  dossier.py
backend/app/services/: __init__.py  analysis_prompt.py  contract_text_chunker.py  document_chunk_persistence.py  dossier_generator.py  embedding_provider.py  pdf_text_extractor.py  workflow.py
backend/tech_law_rag_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_analysis_prompt.py  test_contract_text_chunker.py  test_document_chunk_persistence.py  test_dossier_generator.py  test_dossier_schemas.py  test_embedding_provider.py  test_health.py  test_observability.py  test_pdf_text_extractor.py  test_supabase_migrations.py
frontend/: index.html
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AnalysisHistory.css  AnalysisHistory.tsx  AnalysisStatus.css  AnalysisStatus.tsx  DossierViewer.css  DossierViewer.tsx  UploadZone.css  UploadZone.tsx
supabase/migrations/: 202606040001_create_rag_schema.sql
