[project]
name = "tech-law-rag-backend"
version = "0.1.0"
description = "FastAPI backend for the Tech-Law RAG project."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "openai>=1.59.0",
    "psycopg[binary]>=3.2.0",
    "pypdf>=5.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
